crates/ruma-common/tests/it/api/ui/serde-flatten-request-body.stderr
error: Use `#[ruma_api(body)]` to represent the JSON body as a single field
  --> tests/it/api/ui/serde-flatten-request-body.rs:23:5
   |
23 | /     #[serde(flatten)]
24 | |     pub foo: CustomRequestBody,
   | |______________________________^
